--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,15 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>All British Motor Show</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Alice&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
-  <div id="root"></div> 
+  <div id="root"></div>
 
 </body>
 
