--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>All British Motor Show</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Caladea&family=Carrois+Gothic+SC&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
-    rel="stylesheet">
-</head>
+    <meta
+      name="description"
+      content="Welcome to the All British Motor Show in Danville, California"
+    />
+    <meta property="og:title" content="All British Motor Show" data-rh="true" />
+    <meta
+      property="og:description"
+      content="Welcome to the All British Motor Show in Danville, California"
+      data-rh="true"
+    />
+    <meta
+      property="og:image"
+      content="https://www.allbritishmotorshow.com/images/fb-open-graph/fb-open-graph.jpg"
+      data-rh="true"
+    />
 
-<body>
-  <div id="root"></div>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>All British Motor Show</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caladea&family=Carrois+Gothic+SC&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
