Add tsconfig.json, main.tsx, index.html, .eslintrc.js, Logo component, MarqueList component, createJson.mjs, Map component, Alert component, Transition component, and Cards component*** ***Update constants.js*** ***Delete Slide component

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.ico" />
+    <link rel="icon" href="/favicons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
@@ -22,8 +22,8 @@
       data-rh="true"
     />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="/favicons/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
     <title>All British Motor Show</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
