Site verification to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
     />
     <meta name="google-site-verification" content="rjfn90WAaIfAZ558pjsU70YnKizXxpmY0uUjIb10hMQ" />
   </head>
-
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
